--- a/DesktopClient/App.xaml
+++ b/DesktopClient/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:DesktopClient"
              StartupUri="Views/LoginWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/WPF;component/Styles/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
