--- a/DesktopClient/Views/LoginWindow.xaml
+++ b/DesktopClient/Views/LoginWindow.xaml
@@ -1,21 +1,13 @@
-﻿<UserControl x:Class="DesktopClient.LoginWindow"
+﻿<Window x:Class="DesktopClient.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:h="clr-namespace:DesktopClient.Helpers"
+        xmlns:cc="clr-namespace:WPF.Controls;assembly=WPF"
         mc:Ignorable="d"
-        Height="150" Width="300"
+        Height="250" Width="300"
         Name="LoginView">
     <Grid>
-        <Grid.Resources>
-            <Style TargetType="TextBox">
-                <Setter Property="Margin" Value="0 0 0 5"/>
-            </Style>
-            <Style TargetType="PasswordBox">
-                <Setter Property="Margin" Value="0 5 0 5"/>
-            </Style>
-        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -23,22 +15,31 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="2">Fedt label</Label>
-        <TextBox Grid.Row="1" Grid.Column="2" 
-                 Text="{Binding Username}" 
-                 Name="UserNameTextBox" />
-        <PasswordBox  Grid.Row="2" Grid.Column="2" 
-                      Name="PasswordBox" />
 
-        <Button Grid.Row="3" Grid.Column="2" 
+
+        <cc:TextBox Grid.Row="0" Grid.Column="1" 
+                 Text="{Binding Username}" 
+                 Name="UserNameTextBox"
+                 Style="{StaticResource LoginTextBox}"
+                 Watermark="Username"/>
+        <PasswordBox  Grid.Row="1" Grid.Column="1" 
+                      Name="PasswordBox"
+                      Style="{StaticResource LoginPage}"/>
+
+        <Button Grid.Row="2" Grid.Column="1" 
                 Command="{Binding LoginCommand}"
                 CommandParameter="{Binding ElementName=LoginView}" 
                 Content="Login"
-                Name="LoginButton"/>
+                Name="LoginButton"
+                Style="{StaticResource LoginPage}"/>
+        <Button Grid.Row="3" Grid.Column="1"
+                Command="{Binding OpenRegisterCommand}"
+                Content="Don't have a user yet? Click here to register!"
+                Style="{StaticResource LinkButton}"/>
 
     </Grid>
-</UserControl>
+</Window>
