--- a/DesktopClient/App.xaml
+++ b/DesktopClient/App.xaml
@@ -1,13 +1,17 @@
 ﻿<Application x:Class="DesktopClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:con="clr-namespace:WPF.Converters;assembly=WPF"
              xmlns:local="clr-namespace:DesktopClient"
-             StartupUri="Views/LoginWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/WPF;component/Styles/Styles.xaml" />
+                <!--<ResourceDictionary Source="/WPF;component/Converters/BoolToVisibilityConverter" />-->
             </ResourceDictionary.MergedDictionaries>
+            <con:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
