--- a/DesktopClient/App.xaml
+++ b/DesktopClient/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:con="clr-namespace:WPF.Converters;assembly=WPF"
              xmlns:local="clr-namespace:DesktopClient"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/AdministratorView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,7 +11,8 @@
                 <!--<ResourceDictionary Source="/WPF;component/Converters/BoolToVisibilityConverter" />-->
             </ResourceDictionary.MergedDictionaries>
             <con:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
-
+            <con:MultiStringConverterBinding x:Key="MultiStringConverterBinding"/>
+            <con:MultiBoolConverterBinding x:Key="MultiBoolConverterBinding"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
