Take one on mainwindow

--- a/DesktopClient/Views/MainWindow.xaml
+++ b/DesktopClient/Views/MainWindow.xaml
@@ -19,7 +19,9 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
+        <ListView ItemsSource="{Binding Items}">
 
+        </ListView>
         </Grid>
     </StackPanel>
 </Window>
