--- a/DesktopClient/Views/AdminUserView.xaml
+++ b/DesktopClient/Views/AdminUserView.xaml
@@ -20,6 +20,7 @@
         </Grid.ColumnDefinitions>
         <TextBox Grid.Column="1" Height="25" />
         <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0"/>
+        <Button Grid.Column="3" Height="25" Width="100" Content="Create user" Padding="2,0,0,0"/>
         <StackPanel Orientation="Horizontal" Grid.Column="5" Grid.RowSpan="2">
             <Rectangle VerticalAlignment="Stretch" Width="1" Stroke="Black" Margin="2,0,2,0"/>
         </StackPanel>
@@ -30,14 +31,31 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        
         <StackPanel Grid.Column="5" Orientation="Vertical" Grid.RowSpan="2" Margin="10,0">
-            <Label Content="Edit user" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+            <StackPanel.Visibility>
+                <MultiBinding Converter="{StaticResource MultiBoolConverterBinding}">
+                    <Binding Path="EditUser}"/>
+                    <Binding Path="CreateUser"/>
+                </MultiBinding>
+            </StackPanel.Visibility>
+            <Label Content="Edit user" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10" Visibility="{Binding EditUser, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Label Content="Create user" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10" Visibility="{Binding CreateUser, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Label Content="Username"/>
             <TextBox Style="{StaticResource AdminTextBox}">
                 <TextBox.Text>
                     <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
                         <Binding Path="SelectedUser.Username" Mode="OneWay"/>
                         <Binding Path="TmpUsername"/>
+                    </MultiBinding>
+                </TextBox.Text>
+            </TextBox>
+            <Label Content="Password"/>
+            <TextBox Style="{StaticResource AdminTextBox}">
+                <TextBox.Text>
+                    <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
+                        <Binding Path="SelectedUser.password" Mode="OneWay"/>
+                        <Binding Path="TmpPassword"/>
                     </MultiBinding>
                 </TextBox.Text>
             </TextBox>
@@ -59,7 +77,7 @@
                     </MultiBinding>
                 </CheckBox.IsChecked>
             </CheckBox>
-            <Button Content="Save changes" Height="25" Command="{Binding SaveUserCommand}" CommandParameter="{Binding TmpUsername}"/>
+            <Button Content="Save changes" Height="25" Command="{Binding SaveUserCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
