--- a/DesktopClient/Views/AdminItemView.xaml
+++ b/DesktopClient/Views/AdminItemView.xaml
@@ -19,6 +19,7 @@
         </Grid.ColumnDefinitions>
         <TextBox Grid.Column="1" Height="25" />
         <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0"/>
+        <Button Grid.Column="3" Height="25" Width="100" Content="Create Item" Padding="2,0,0,0" Command="{Binding AdminCreateItemCommand}"/>
         <StackPanel Orientation="Horizontal" Grid.Column="5" Grid.RowSpan="2">
             <Rectangle VerticalAlignment="Stretch" Width="1" Stroke="Black" Margin="2,0,2,0"/>
         </StackPanel>
@@ -30,7 +31,14 @@
             </ListView.ItemTemplate>
         </ListView>
         <StackPanel Grid.Column="5" Orientation="Vertical" Grid.RowSpan="2" Margin="10,0">
-            <Label Content="Edit Item" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+            <StackPanel.Visibility>
+                <MultiBinding Converter="{StaticResource MultiBoolToVisibilityConverter}">
+                    <Binding Path="EditItem"/>
+                    <Binding Path="CreateItem"/>
+                </MultiBinding>
+            </StackPanel.Visibility>
+            <Label Content="Edit Item" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10" Visibility="{Binding EditItem, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Label Content="Create Item" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10" Visibility="{Binding CreateItem, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Label Content="Name"/>
             <TextBox Style="{StaticResource AdminTextBox}">
                 <TextBox.Text>
@@ -45,20 +53,21 @@
                 <TextBox.Text>
                     <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
                         <Binding Path="SelectedItem.Price" Mode="OneWay"/>
-                        <Binding Path="TmpPrice"/>
+                        <Binding Path="TmpPrice" Converter="{StaticResource StringToDoubleConverter}"/>
                     </MultiBinding>
                 </TextBox.Text>
             </TextBox>
-            <Label Content="Amunt"/>
+            <Label Content="Amount"/>
             <TextBox Style="{StaticResource AdminTextBox}">
                 <TextBox.Text>
-                    <MultiBinding Converter="{StaticResource MultiBoolConverterBinding}">
-                        <Binding Path="SelectedItem.Amount, Mode=OneWay}"/>
-                        <Binding Path="TmpAmount"/>
+                    <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
+                        <Binding Path="SelectedItem.Amount" Mode="OneWay"/>
+                        <Binding Path="TmpAmount" Converter="{StaticResource StringToIntConverter}"/>
                     </MultiBinding>
                 </TextBox.Text>
             </TextBox>
-            <Button Content="Save changes" Height="25"/>
+            <Button Content="Save changes" Height="25" Visibility="{Binding EditItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding SaveItemCommand}"/>
+            <Button Content="Create" Height="25" Visibility="{Binding CreateItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding CreateItemCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
