--- a/DesktopClient/Views/AdminUserView.xaml
+++ b/DesktopClient/Views/AdminUserView.xaml
@@ -20,7 +20,7 @@
         </Grid.ColumnDefinitions>
         <TextBox Grid.Column="1" Height="25" />
         <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0"/>
-        <Button Grid.Column="3" Height="25" Width="100" Content="Create user" Padding="2,0,0,0"/>
+        <Button Grid.Column="3" Height="25" Width="100" Content="Create user" Padding="2,0,0,0" Command="{Binding AdminCreateUserCommand}"/>
         <StackPanel Orientation="Horizontal" Grid.Column="5" Grid.RowSpan="2">
             <Rectangle VerticalAlignment="Stretch" Width="1" Stroke="Black" Margin="2,0,2,0"/>
         </StackPanel>
@@ -34,8 +34,8 @@
         
         <StackPanel Grid.Column="5" Orientation="Vertical" Grid.RowSpan="2" Margin="10,0">
             <StackPanel.Visibility>
-                <MultiBinding Converter="{StaticResource MultiBoolConverterBinding}">
-                    <Binding Path="EditUser}"/>
+                <MultiBinding Converter="{StaticResource MultiBoolToVisibilityConverter}">
+                    <Binding Path="EditUser"/>
                     <Binding Path="CreateUser"/>
                 </MultiBinding>
             </StackPanel.Visibility>
@@ -54,7 +54,7 @@
             <TextBox Style="{StaticResource AdminTextBox}">
                 <TextBox.Text>
                     <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
-                        <Binding Path="SelectedUser.password" Mode="OneWay"/>
+                        <Binding Path="SelectedUser.Password" Mode="OneWay"/>
                         <Binding Path="TmpPassword"/>
                     </MultiBinding>
                 </TextBox.Text>
@@ -72,12 +72,13 @@
             <CheckBox Style="{StaticResource AdminTextBox}">
                 <CheckBox.IsChecked>
                     <MultiBinding Converter="{StaticResource MultiBoolConverterBinding}">
-                        <Binding Path="SelectedUser.IsAdmin, Mode=OneWay}"/>
+                        <Binding Path="SelectedUser.IsAdmin" Mode="OneWay"/>
                         <Binding Path="TmpIsAdmin"/>
                     </MultiBinding>
                 </CheckBox.IsChecked>
             </CheckBox>
-            <Button Content="Save changes" Height="25" Command="{Binding SaveUserCommand}"/>
+            <Button Content="Save changes" Height="25" Command="{Binding SaveUserCommand}" Visibility="{Binding EditUser, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="Create" Height="25" Command="{Binding CreateUserCommand}" Visibility="{Binding CreateUser, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
 </UserControl>
