--- a/DesktopClient/Views/AdminItemView.xaml
+++ b/DesktopClient/Views/AdminItemView.xaml
@@ -17,8 +17,11 @@
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="12*"/>
         </Grid.ColumnDefinitions>
-        <TextBox Grid.Column="1" Height="25" />
-        <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0"/>
+        <StackPanel Grid.Column="1" Orientation="Horizontal">
+            <TextBox Height="25" Text="{Binding TmpSearch}" Width="150" Padding="0,0,10,0"/>
+            <Button Content="X" Margin="-15,0,0,0" Background="Transparent" BorderThickness="0" Height="25" Foreground="Red" Command="{Binding ClearCommand}" Visibility="{Binding TmpSearch, Converter={StaticResource StringToVisibilityConverter}}"/>
+        </StackPanel>
+        <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0" Command="{Binding SearchItemCommand}"/>
         <Button Grid.Column="3" Height="25" Width="100" Content="Create Item" Padding="2,0,0,0" Command="{Binding AdminCreateItemCommand}"/>
         <StackPanel Orientation="Horizontal" Grid.Column="5" Grid.RowSpan="2">
             <Rectangle VerticalAlignment="Stretch" Width="1" Stroke="Black" Margin="2,0,2,0"/>
@@ -58,7 +61,7 @@
                 </TextBox.Text>
             </TextBox>
             <Label Content="Amount"/>
-            <TextBox Style="{StaticResource AdminTextBox}">
+            <TextBox  Style="{StaticResource AdminTextBox}">
                 <TextBox.Text>
                     <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
                         <Binding Path="SelectedItem.Amount" Mode="OneWay"/>
@@ -66,8 +69,18 @@
                     </MultiBinding>
                 </TextBox.Text>
             </TextBox>
+            <Label Content="Picture"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBox  Style="{StaticResource AdminTextBox}" Grid.Column="0"/>
+                <Button Content="Browse" Height="25" Margin="5,0,0,10" Command="{Binding BrowseCommand}" Grid.Column="1"/>
+            </Grid>
             <Button Content="Save changes" Height="25" Visibility="{Binding EditItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding SaveItemCommand}"/>
             <Button Content="Create" Height="25" Visibility="{Binding CreateItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding CreateItemCommand}"/>
+            <Button Content="Delete chosen item" Height="25" Visibility="{Binding EditItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding DeleteItemCommand}" Margin="0,5,0,0"/>
         </StackPanel>
     </Grid>
 </UserControl>
