--- a/DesktopClient/Views/AdminUserView.xaml
+++ b/DesktopClient/Views/AdminUserView.xaml
@@ -18,8 +18,11 @@
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="12*"/>
         </Grid.ColumnDefinitions>
-        <TextBox Grid.Column="1" Height="25" />
-        <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0"/>
+        <StackPanel Grid.Column="1" Orientation="Horizontal">
+            <TextBox Height="25" Text="{Binding TmpSearch}" Padding="0,0,10,0" Width="150"/>
+            <Button Content="X" Foreground="Red" Margin="-15,0,0,0" Height="25" Background="Transparent" Command="{Binding ClearCommand}" BorderThickness="0" Visibility="{Binding TmpSearch, Converter={StaticResource StringToVisibilityConverter}}"/>
+        </StackPanel>
+        <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0" Command="{Binding SearchUserCommand}"/>
         <Button Grid.Column="3" Height="25" Width="100" Content="Create user" Padding="2,0,0,0" Command="{Binding AdminCreateUserCommand}"/>
         <StackPanel Orientation="Horizontal" Grid.Column="5" Grid.RowSpan="2">
             <Rectangle VerticalAlignment="Stretch" Width="1" Stroke="Black" Margin="2,0,2,0"/>
@@ -79,6 +82,7 @@
             </CheckBox>
             <Button Content="Save changes" Height="25" Command="{Binding SaveUserCommand}" Visibility="{Binding EditUser, Converter={StaticResource BoolToVisibilityConverter}}"/>
             <Button Content="Create" Height="25" Command="{Binding CreateUserCommand}" Visibility="{Binding CreateUser, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="Delete selected user" Height="25" Command="{Binding DeleteUserCommand}" Visibility="{Binding EditUser, Converter={StaticResource BoolToVisibilityConverter}}" Margin="0,5,0,0"/>
         </StackPanel>
     </Grid>
 </UserControl>
