--- a/DesktopClient/Views/MainWindow.xaml
+++ b/DesktopClient/Views/MainWindow.xaml
@@ -9,32 +9,6 @@
         Title="MainWindow" Height="450" Width="800">
     <StackPanel>
         <local:RibbonView />
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-        <ListView ItemsSource="{Binding Items}" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="3" BorderThickness="1">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                        <StackPanel>
-                            <!--There should be an image of the item here-->
-                            <TextBlock Text="{Binding Name}"/>
-                            <TextBlock Text="{Binding Amount}"/>
-                        </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <UniformGrid Columns="3"/>
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-        </ListView>
-        </Grid>
+        <local:ItemOverviewView />
     </StackPanel>
 </Window>
