--- a/DesktopClient/Views/AdministratorView.xaml
+++ b/DesktopClient/Views/AdministratorView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="DesktopClient.Views.AdministratorView"
+﻿<UserControl x:Class="DesktopClient.Views.AdministratorView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DesktopClient.Views"
         mc:Ignorable="d"
-        Title="AdministratorView" Height="450" Width="800">
+             Height="450">
     <Grid>
         <TabControl>
             <TabItem Header="User" Width="100">
@@ -16,4 +16,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</Window>
+</UserControl>
