--- a/DesktopClient/Views/MainWindow.xaml
+++ b/DesktopClient/Views/MainWindow.xaml
@@ -5,10 +5,74 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:cc="clr-namespace:WPF.Controls;assembly=WPF"
         xmlns:local="clr-namespace:DesktopClient.Views"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <StackPanel>
+        xmlns:localvm="clr-namespace:DesktopClient.ViewModels"
+        Title="MainWindow" Height="516" Width="800">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type localvm:ItemOverviewViewModel}">
+            <local:ItemOverviewView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type localvm:AdministratorViewModel}">
+            <local:AdministratorView/>
+        </DataTemplate>
+    </Window.Resources>
+
+    <!--<StackPanel>
         <local:RibbonView />
         <local:ItemOverviewView />
+    </StackPanel>-->
+
+    <StackPanel>
+        <Grid Background="{StaticResource RibbonBackgroundBrush}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="56"/>
+            </Grid.RowDefinitions>
+                <ItemsControl ItemsSource="{Binding PageViewModels}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Button Height="56" Command="{Binding DataContext.ChangePageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding }" Background="{StaticResource RibbonBackgroundBrush}">
+                                <Button.Content>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Image Grid.Column="0" Source="{Binding Icon}"/>
+                                        <TextBlock Grid.Column="1" Text="{Binding Name}"/>
+                                    </Grid>
+                                </Button.Content>
+                            </Button>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                
+                </ItemsControl>
+        </Grid>
+        <Rectangle Stroke="Black" StrokeThickness="1" Margin="0,5,0,5"/>
+
+        <ContentControl Content="{Binding CurrentPageViewModel}" />
+
     </StackPanel>
+
+    
+    <!--<DockPanel>-->
+        <!--<Border DockPanel.Dock="Left" BorderBrush="Black" BorderThickness="0,0,1,0">
+            <ItemsControl ItemsSource="{Binding PageViewModels}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Button Content="{Binding Name}"
+                                Command="{Binding DataContext.ChangePageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                                CommandParameter="{Binding }"
+                                Margin="2,5"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Border>
+
+        <ContentControl Content="{Binding CurrentPageViewModel}" />
+    </DockPanel>-->
+
 </Window>
