--- a/DesktopClient/Views/OrderHistoryView.xaml
+++ b/DesktopClient/Views/OrderHistoryView.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DesktopClient.Views"
-        mc:Ignorable="d">
+        mc:Ignorable="d"
+        d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -18,76 +19,42 @@
             <ColumnDefinition Width="12*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="1" Orientation="Horizontal">
-            <TextBox Height="25" Text="{Binding TmpSearch}" Width="150" Padding="0,0,10,0"/>
-            <Button Content="X" Margin="-15,0,0,0" Background="Transparent" BorderThickness="0" Height="25" Foreground="Red" Command="{Binding ClearCommand}" Visibility="{Binding TmpSearch, Converter={StaticResource StringToVisibilityConverter}}"/>
+            <Label Content="Order history" FontSize="24"/>
         </StackPanel>
-        <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0" Command="{Binding SearchItemCommand}"/>
-        <Button Grid.Column="3" Height="25" Width="100" Content="Create Item" Padding="2,0,0,0" Command="{Binding AdminCreateItemCommand}"/>
-        <StackPanel Orientation="Horizontal" Grid.Column="5" Grid.RowSpan="2">
+        <StackPanel Orientation="Horizontal" Grid.Column="5" Grid.RowSpan="3">
             <Rectangle VerticalAlignment="Stretch" Width="1" Stroke="Black" Margin="2,0,2,0"/>
         </StackPanel>
-        <ListView Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,0,5" Grid.Row="1" ItemsSource="{Binding Items}" BorderThickness="0" SelectedItem="{Binding SelectedItem}" SelectionMode="Single">
+        <ListView Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,0,5" Grid.Row="1" ItemsSource="{Binding Orders}" BorderThickness="0" SelectedItem="{Binding SelectedOrder}" SelectionMode="Single">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Id}" Margin="0,0,20,0"/>
+                        <TextBlock Text="{Binding ItemsAmount.Count}" Margin="20,0,20,0"/>
+                        <TextBlock Text="{Binding TotalPrice}" Margin="20,0,0,0"/>
+                    </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <StackPanel Grid.Column="5" Orientation="Vertical" Grid.RowSpan="2" Margin="10,0">
-            <StackPanel.Visibility>
-                <MultiBinding Converter="{StaticResource MultiBoolToVisibilityConverter}">
-                    <Binding Path="EditItem"/>
-                    <Binding Path="CreateItem"/>
-                </MultiBinding>
-            </StackPanel.Visibility>
-            <Label Content="Edit Item" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10" Visibility="{Binding EditItem, Converter={StaticResource BoolToVisibilityConverter}}"/>
-            <Label Content="Create Item" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10" Visibility="{Binding CreateItem, Converter={StaticResource BoolToVisibilityConverter}}"/>
-            <Label Content="Name"/>
-            <TextBox Style="{StaticResource AdminTextBox}">
-                <TextBox.Text>
-                    <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
-                        <Binding Path="SelectedItem.Name" Mode="OneWay"/>
-                        <Binding Path="TmpName"/>
-                    </MultiBinding>
-                </TextBox.Text>
-            </TextBox>
-            <Label Content="Price"/>
-            <TextBox Style="{StaticResource AdminTextBox}">
-                <TextBox.Text>
-                    <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
-                        <Binding Path="SelectedItem.Price" Mode="OneWay"/>
-                        <Binding Path="TmpPrice" Converter="{StaticResource StringToDoubleConverter}"/>
-                    </MultiBinding>
-                </TextBox.Text>
-            </TextBox>
-            <Label Content="Amount"/>
-            <TextBox  Style="{StaticResource AdminTextBox}">
-                <TextBox.Text>
-                    <MultiBinding Converter="{StaticResource MultiStringConverterBinding}">
-                        <Binding Path="SelectedItem.Amount" Mode="OneWay"/>
-                        <Binding Path="TmpAmount" Converter="{StaticResource StringToIntConverter}"/>
-                    </MultiBinding>
-                </TextBox.Text>
-            </TextBox>
-            <Label Content="Picture"/>
-            <Grid Height="72">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="auto"/>
-                </Grid.ColumnDefinitions>
-                <Image Grid.Column="0" MaxWidth="72" MaxHeight="72">
-                    <Image.Source>
-                        <MultiBinding Converter="{StaticResource MultiImageBindingConverter}">
-                            <Binding Path="SelectedItem.Picture" Converter="{StaticResource ByteArrayToImageSourceConverter}"/>
-                            <Binding Path="Img"/>
-                        </MultiBinding>
-                    </Image.Source>
-                </Image>
-                <Button Content="Browse" Height="25" Margin="5,0,0,10" Command="{Binding BrowseCommand}" Grid.Column="1"/>
-            </Grid>
-            <Button Content="Save changes" Height="25" Visibility="{Binding EditItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding SaveItemCommand}"/>
-            <Button Content="Create" Height="25" Visibility="{Binding CreateItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding CreateItemCommand}"/>
-            <Button Content="Delete chosen item" Height="25" Visibility="{Binding EditItem, Converter={StaticResource BoolToVisibilityConverter}}" Command="{Binding DeleteItemCommand}" Margin="0,5,0,0"/>
+        <StackPanel Grid.Column="5" Orientation="Vertical" Grid.RowSpan="2" Margin="10,0" Visibility="{Binding ShowItems, Converter={StaticResource BoolToVisibilityConverter}}">
+            <Label Content="Items" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+            <ItemsControl ItemsSource="{Binding Items}" Name="itemsControl">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding Name}" Grid.Column="2"/>
+                            <TextBlock Text="{Binding Price}" Grid.Column="4"/>
+                            <TextBlock Text="{Binding Amount}" Grid.Column="0"/>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </StackPanel>
     </Grid>
 </UserControl>
