Stuff is ugly but it works

--- a/DesktopClient/Views/ShoppingCartView.xaml
+++ b/DesktopClient/Views/ShoppingCartView.xaml
@@ -28,6 +28,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Content="Purchase"/>
+        <Button Content="Purchase" Command="{Binding PurchaseCommand}"/>
     </StackPanel>
 </UserControl>
