--- a/DesktopClient/Views/ItemOverviewView.xaml
+++ b/DesktopClient/Views/ItemOverviewView.xaml
@@ -44,6 +44,6 @@
             </ListView.ItemsPanel>
         </ListView>
         <Rectangle Grid.Row="0" Grid.RowSpan="3" Grid.Column="3" VerticalAlignment="Stretch" Width="1" Stroke="Black" Margin="2,0,2,0"/>
-        <local:ShoppingCartView Grid.Column="4" Grid.Row="0" Grid.RowSpan="3" />
+        <local:ShoppingCartView Grid.Column="4" Grid.Row="0" Grid.RowSpan="3" Margin="0,0,50,0" />
     </Grid>
 </UserControl>
