--- a/DesktopClient/Views/AdminUserView.xaml
+++ b/DesktopClient/Views/AdminUserView.xaml
@@ -20,7 +20,7 @@
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="1" Orientation="Horizontal">
             <TextBox Height="25" Text="{Binding TmpSearch}" Padding="0,0,10,0" Width="150"/>
-            <Button Content="X" Foreground="Red" Margin="-15,0,0,0" Height="25" Background="Transparent" Command="{Binding ClearCommand}" BorderThickness="0" Visibility="{Binding TmpSearch, Converter={StaticResource StringToVisibilityConverter}}"/>
+            <Button Style="{StaticResource ClearSearchButtonStyle}" Command="{Binding ClearCommand}" Visibility="{Binding TmpSearch, Converter={StaticResource StringToVisibilityConverter}}"/>
         </StackPanel>
         <Button Grid.Column="2" Height="25" Width="50" Content="Find" Padding="2,0,0,0" Command="{Binding SearchUserCommand}"/>
         <Button Grid.Column="3" Height="25" Width="100" Content="Create user" Padding="2,0,0,0" Command="{Binding AdminCreateUserCommand}"/>
