--- a/DesktopClient/Views/ItemOverviewView.xaml
+++ b/DesktopClient/Views/ItemOverviewView.xaml
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="1" Orientation="Horizontal" Grid.Row="0">
             <TextBox Height="25" Text="{Binding TmpSearch}" Padding="0,0,10,0" Width="150"/>
-            <Button Content="X" Foreground="Red" Margin="-15,0,0,0" Height="25" Background="Transparent" Command="{Binding ClearSearchCommand}" BorderThickness="0" Visibility="{Binding TmpSearch, Converter={StaticResource StringToVisibilityConverter}}"/>
+            <Button Style="{StaticResource ClearSearchButtonStyle}" Command="{Binding ClearSearchCommand}" Visibility="{Binding TmpSearch, Converter={StaticResource StringToVisibilityConverter}}"/>
         </StackPanel>
         <Button Grid.Column="2" Grid.Row="0" Style="{StaticResource SearchButtonStyle}" Content="Find" Command="{Binding SearchItemCommand}"/>
         <!--<ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="2" VerticalScrollBarVisibility="Auto">-->
